--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "your name",
-            "email": "your email"
+            "name": "shijun",
+            "email": "string.chang@gmail.com"
         }
     ],
     "require": {
